<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="?attr/colorSurface">

    <TextView
        style="@style/Constraints"
        android:id="@+id/mainTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="108dp"
        android:layout_marginTop="4dp"
        android:text="@string/welcome_to_the_cafe"
        android:textSize="20sp"
        android:tint="?attr/colorPrimary"/>

    <ImageView
        style="@style/Constraints"
        android:id="@+id/logoImage"
        android:layout_width="354dp"
        android:layout_height="182dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="29dp"
        android:contentDescription="@string/a_logo_display_of_the_cafe"
        android:src="@drawable/cafe_main"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        style="@style/Constraints"
        android:id="@+id/orderAsk"
        android:layout_width="212dp"
        android:layout_height="21dp"
        android:layout_marginStart="96dp"
        android:layout_marginTop="204dp"
        android:text="@string/what_would_you_like_to_order"
        tools:textSize="16sp"
        android:tint="?attr/colorPrimary"/>

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="176dp"
        android:layout_height="196dp"
        android:layout_marginEnd="128dp"
        android:layout_marginBottom="4dp"
        app:layout_constraintBottom_toTopOf="@+id/diningCheck"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/orderAsk"
        app:layout_constraintVertical_bias="1.0">

        <RadioButton
            android:id="@+id/radioButton1"
            android:layout_width="151dp"
            android:layout_height="wrap_content"
            android:text="@string/koffing_koffee"
            android:textSize="16sp"
            tools:layout_editor_absoluteX="135dp"
            tools:layout_editor_absoluteY="318dp"
            android:tint="?attr/colorSecondary"/>

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="151dp"
            android:layout_height="wrap_content"
            android:text="@string/alcreamie_cone"
            android:textSize="16sp"
            tools:layout_editor_absoluteX="135dp"
            tools:layout_editor_absoluteY="281dp"
            android:tint="?attr/colorSecondary"/>

        <RadioButton
            android:id="@+id/radioButton3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/palossand_wiches"
            android:textSize="16sp"
            tools:layout_editor_absoluteX="135dp"
            tools:layout_editor_absoluteY="349dp"
            android:tint="?attr/colorSecondary"/>

        <RadioButton
            android:id="@+id/radioButton4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fidough_nuts"
            android:textSize="16sp"
            tools:layout_editor_absoluteX="135dp"
            tools:layout_editor_absoluteY="369dp"
            android:tint="?attr/colorSecondary"/>

    </RadioGroup>

    <EditText
        style="@style/Constraints"
        android:id="@+id/editName"
        android:layout_width="216dp"
        android:layout_height="53dp"
        android:layout_marginStart="96dp"
        android:layout_marginTop="504dp"
        android:hint="@string/please_enter_your_name"
        android:inputType="text"
        android:tint="?attr/colorPrimary"/>

    <Button
        android:id="@+id/btnSend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:text="@string/submit_your_order"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editName" />

    <CheckBox
        style="@style/Constraints"
        android:id="@+id/diningCheck"
        android:layout_width="183dp"
        android:layout_height="58dp"
        android:layout_marginStart="108dp"
        android:layout_marginTop="432dp"
        android:text="@string/will_you_be_dining_in"
        android:tint="?attr/colorPrimary"/>

</androidx.constraintlayout.widget.ConstraintLayout>