<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ReceiptActivity"
    android:orientation="vertical"
    android:background="?attr/colorSurface">

    <TextView
        android:id="@+id/titleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/thank_you_for_dining_with_us"
        android:textSize="24sp"
        android:tint="?attr/colorPrimary"/>

    <ImageView
        style="@style/ReceiptImage"
        android:id="@+id/thankYouImage"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/an_image_of_a_pikachu_saying_thank_you"
        android:src="@drawable/thank_you" />

    <TextView
        android:id="@+id/textReceipt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/here_is_your_receipt"
        android:textSize="24sp"
        android:tint="?attr/colorPrimary"/>

    <TextView
        android:id="@+id/textName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:text="Name to be added here"
        android:textSize="20sp"
        android:tint="?attr/colorSecondary"/>

    <TextView
        android:id="@+id/textItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp"
        android:text="Item to be added here"
        android:textSize="20sp"
        android:tint="?attr/colorSecondary"/>

    <TextView
        android:id="@+id/textDining"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp"
        android:text="Dining to be added here"
        android:textSize="20sp"
        android:tint="?attr/colorSecondary"/>

    <TextView
        android:id="@+id/textPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp"
        android:text="Price to be added here"
        android:textSize="20sp"
        android:tint="?attr/colorSecondary"/>

    <ImageView
        android:id="@+id/circleImage"
        android:layout_width="144dp"
        android:layout_height="132dp"
        android:src="@drawable/check_circle"
        android:paddingTop="50dp"
        android:layout_gravity="center_horizontal"
        android:tint="?attr/colorSecondary"/>
</LinearLayout>